# loginmanager

./: .gitignore  Cargo.toml
examples/axum_loginmanager/: Cargo.toml
examples/axum_loginmanager/src/: actix_test.rs  db.rs  main.rs
loginmanager/: Cargo.toml  README.md
loginmanager/src/: cooke_session.rs  extractors.rs  extractors_actix.rs  extractors_axum.rs  lib.rs  loginmanager.rs  loginmanager_actix.rs  loginmanager_axum.rs
loginmanager/src/loginrequired/: mod.rs
