[package]
name = "loginmanager"
version = "0.1.0"
edition = "2021"
description = "a loginmanager for axum "
keywords = ["http", "web", "axum", "loginmanager"]
repository = "https://github.com/krealseu/loginmanager"
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
futures = "0.3.28"
serde = { version = "^1.0", features = ["derive"] }
async-trait = "^0.1.68"
serde_json = "^1.0.96"
headers = "^0.3.8"
http = "^0.2.7"
cookie = { version = "^0.17.0", features = [
    "private",
    "key-expansion",
    "percent-encode",
] }
rust-crypto = "^0.2"
tower = { version = "^0.4", optional = true }

[dependencies.time]
version = "^0.3"
features = ["std"]
default-features = false

[dependencies.axum]
version = "^0.6"
features = ["headers"]
optional = true

[features]
axum_layer = ["axum", "tower"]
default = ["axum_layer"]
