[package]
name = "loginmanager"
version = "0.2.2"
edition = "2021"
description = "a loginmanager for axum "
keywords = ["http", "web", "axum", "loginmanager"]
repository = "https://github.com/krealseu/loginmanager"
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "^0.3"
futures = "^0.3"
serde = { version = "^1", features = ["derive"] }
async-trait = "^0.1"
serde_json = "^1"
http = "^1"
hex = "^0.4"
cookie = { version = "^0.18", features = [
    "private",
    "key-expansion",
    "percent-encode",
] }
sha2 = "^0.10"
tower-service = { version = "^0.3", optional = true }
tower-layer = { version = "^0.3", optional = true }
urlencoding = "^2.1"

[dependencies.time]
version = "^0.3"
features = ["std"]
default-features = false

[dependencies.axum]
version = "^0.7"
optional = true

[dependencies.actix-web]
version = "4"
optional = true

[features]
axum_layer = ["axum", "tower-service", "tower-layer"]
actix_layer = ["actix-web"]
default = ["axum_layer"]
