[package]
name = "axum_loginmanager"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loginmanager = { path = "../../loginmanager", features = ["actix_layer"] }
actix-web = "4"
axum = { version = "0.7.4", features = ["multipart"] }
tokio = { version = "^1", features = ["full", "rt-multi-thread"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0.96"
uuid = { version = "1.3.2", features = ['v4'] }
chrono = "0.4.24"
config = "0.13.3"
tower-http = { version = "0.4.0", features = ["fs", "trace", "cors", "limit"] }
regex = "1.8.1"
once_cell = "1.17.1"
dotenv = "^0.15"
sea-orm = { version = "0.11.3", features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-sqlite",
] }


[[bin]]
name = "actix"
path = "src/actix_test.rs"
